force-app/main/default/objects/MSN_WorkStepAnswer__c/MSN_WorkStepAnswer__c.object-meta.xml
<CustomObject>
    <description>Used to store the possible answer values (aka &quot;findings&quot;) for a specific Spot question. This is e.g. used in the Field Service Mobile App to present the user with a picklis of possible Answer Values to choose from when answering a Spot Question on a Work Step.</description>
    <label>Work Step Answer Choice</label>
    <nameField>
        <displayFormat>WPA-{0000}</displayFormat>
        <label>Work Plan Answer Choice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Step Answer Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>