force-app/main/default/objects/MSN_WorkStepAnswer__c/fields/MSN_AnswerLabel__c.field-meta.xml
<CustomField>
    <fullName>MSN_AnswerLabel__c</fullName>
    <description>The answer/label shown to the user on a choice picklist in the FSL Mobile app for a specific Spot question (e.g. Yes, No, Third-party damage, Leak, No fault found)</description>
    <inlineHelpText>Please enter the label for the answer that should be shown to the user as a picklist choice (e.g. Yes, No, Third Party Damage. Leak etc.)</inlineHelpText>
    <label>Answer Label</label>
    <length>254</length>
    <type>Text</type>
</CustomField>