force-app/main/default/objects/MSN_WorkStepAnswer__c/fields/MSN_AnswerValue__c.field-meta.xml
<CustomField>
    <fullName>MSN_AnswerValue__c</fullName>
    <description>Stores the Value of the answer for a specific SPOT question on a Work Step that needs to be sent back to EAM.</description>
    <inlineHelpText>Please enter the Answer value that needs to be sent back to EAM (e.g. Y, N, TPD, NOFLT, PRIPRO)</inlineHelpText>
    <label>Answer Value</label>
    <length>254</length>
    <type>Text</type>
</CustomField>