force-app/main/default/objects/MSN_WorkStepAnswer__c/fields/MSN_WorkStepTemplate__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkStepTemplate__c</fullName>
    <description>Master-Detail Relationship between a Work Step Answer and the parent &quot;Work Step Template&quot; it relates to.</description>
    <label>Work Step Template</label>
    <referenceTo>WorkStepTemplate</referenceTo>
    <relationshipName>Work_Step_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>