force-app/main/default/objects/MSN_WorkStepAnswer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MSN_AnswerLabel__c</columns>
    <columns>MSN_AnswerValue__c</columns>
    <columns>MSN_Sort_Order__c</columns>
    <columns>MSN_WorkStepTemplate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>